--- a/index.html
+++ b/index.html
@@ -1,31 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoGebra Test</title>
-    <script src="https://www.geogebra.org/apps/deployggb.js"></script>
-</head>
-<body>
-    <div id="ggb-element" style="width: 100%; height: 100vh;"></div>
-    <script>
-        var ggbApp = new GGBApplet({
-            "appName": "classic",
-            "filename": "geogebra.xml", // Points to the extracted XML file
-            "showToolBar": true,
-            "showMenuBar": true,
-            "showAlgebraInput": true,
-            "allowStyleBar": true,
-            "enableLabelDrags": true,
-            "enableUndoRedo": true,
-            "enableShiftDragZoom": true,
-            "useBrowserForJS": false
-        }, true);
-
-        // Inject the applet into the div element on page load
-        window.addEventListener("load", function() {
-            ggbApp.inject('ggb-element');
-        });
-    </script>
-</body>
-</html>
+var ggbApp = new GGBApplet({
+    "filename": "geogebra.xml"
+}, true);
